# antigravity

./: .gitignore  README.md  task.md
LINE/: line.html
ai_info_assistant/: README.md  example_usage.py  main.py  pyproject.toml  scheduler.py  web_server.py
ai_info_assistant/data/: assistant.db
ai_info_assistant/lib/rlm/: pyproject.toml
ai_info_assistant/lib/rlm/rlm/clients/: base_lm.py  openai.py
ai_info_assistant/lib/rlm/rlm/core/: lm_handler.py  types.py
ai_info_assistant/lib/rlm/rlm/environments/: docker_repl.py
ai_info_assistant/market_intel_ai/: main.py  pyproject.toml  scheduler.py  web_server.py
ai_info_assistant/market_intel_ai/data/: market.db
ai_info_assistant/market_intel_ai/src/: config.py  models.py
ai_info_assistant/market_intel_ai/src/analyzer/: sentiment_engine.py
ai_info_assistant/market_intel_ai/src/crawler/: base.py  finance_crawler.py
ai_info_assistant/market_intel_ai/src/database/: storage.py
ai_info_assistant/market_intel_ai/src/web/: app.py
ai_info_assistant/market_intel_ai/src/web/templates/: index.html
ai_info_assistant/src/: config.py  models.py
ai_info_assistant/src/crawler/: arxiv.py  github.py  hackernews.py  reddit.py
ai_info_assistant/src/database/: storage.py
ai_info_assistant/src/refiner/: engine.py  llm.py  rlm_analyzer.py
ai_info_assistant/src/scoring/: engine.py  relevance.py
ai_info_assistant/src/web/: app.py
ai_info_assistant/src/web/templates/: index.html
fiery-lunar/: organize_files.py  rubric.md
photo-renamer/: README.md  index.html  main.py  script.js  style.css
島民行政中心/: find_dupes.py  (+12 more)
(+87 files in other folders)
